--- a/vignettes/articles/queues.qmd
+++ b/vignettes/articles/queues.qmd
@@ -1,24 +1,24 @@
 ---
-title: "Centralized Networks"
+title: "Task Queue"
 vignette: >
-  %\VignetteIndexEntry{Centralized Networks}
+  %\VignetteIndexEntry{Task Queue}
   %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 ---
 
-*rush* can also be used as a centralized network.
+# Scope
+
+*rush* can also be used as a centralized network with a task queue.
 In such a network, a central controller creates tasks and distributes them to the workers.
 The workers evaluate the tasks and send the results back to the controller.
-At the heart of a centralized network is a queue that holds the tasks to be evaluated.
+At the heart of a centralized network is a **queue** that holds the tasks to be evaluated.
+The controller pushes tasks to the queue with  `$push_tasks()` and the workers pop tasks from the queue with `$pop_task()`.
 
-
-The `$push_tasks()` method pushes tasks to the queue and the `$pop_task()` method pops tasks from the queue.
-We know the `$push_results()` method already from the decentralized network.
+# Simple Task Queue
 
 The `worker_loop` is different in a centralized network.
 Instead of creating new tasks, the worker pops tasks from the queue.
-The task is evaluated and the results are sent to the data base.
-The controller usually fetches the results from the database and and creates new tasks.
+The task is evaluated and the results are sent to the data base with `push_results()`.
 
 ```{r}
 worker_loop = function(rush) {
@@ -32,12 +32,15 @@ worker_loop = function(rush) {
 }
 ```
 
+We work again with the Branin function from the [decentralized network](rush.html) article.
 
 ```{r}
 branin = function(x1, x2) {
   (x2 - 5.1 / (4 * pi^2) * x1^2 + 5 / pi * x1 - 6)^2 + 10 * (1 - 1 / (8 * pi)) * cos(x1) + 10
 }
 ```
+
+We start the workers.
 
 ```{r}
 # Connection to the Redis database
@@ -48,11 +51,13 @@ rush = rsh(
   network = "centralized-random-search",
   config = config)
 
-rush$start_local_workers(
+worker_ids = rush$start_local_workers(
   worker_loop = worker_loop,
   n_workers = 4,
   globals = "branin")
 ```
+
+We push a tasks to the queue.
 
 ```{r}
 xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
@@ -60,14 +65,14 @@ xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
 rush$push_tasks(xss = list(xs))
 ```
 
-```{r}
-#| include: false
-Sys.sleep(1)
-```
+After a second we fetch the result.
 
 ```{r}
+Sys.sleep(1)
 rush$fetch_finished_tasks()
 ```
+
+We can also push multiple tasks to the queue.
 
 ```{r}
 xss = replicate(100, list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15)), simplify = FALSE)
@@ -76,10 +81,18 @@ rush$push_tasks(xss = xss)
 ```
 
 ```{r}
-#| include: false
 Sys.sleep(1)
+rush$fetch_finished_tasks()
 ```
 
+# Priority Queues
+
+The controller can also push tasks to specific workers with the `$push_priority_tasks()` method.
+The workers pop tasks from this queue with the higher priority than the shared queue.
+The `priority` argument specifies the worker that should evaluate the task.
+
 ```{r}
-rush$fetch_finished_tasks()
+xs = list(x1 = runif(1, -5, 10), x2 = runif(1, 0, 15))
+
+rush$push_priority_tasks(xss = list(xs), priority = worker_ids[1])
 ```
